Fixed vertical alignment for item details page

--- a/frontend/src/css/ItemDetails.css
+++ b/frontend/src/css/ItemDetails.css
@@ -5,6 +5,11 @@
 	padding-bottom: 1rem;
 	display: flex;
 	justify-content: center;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	align-items: center;
+	min-height: calc(100vh - 4rem);
 }
 
 .image-details {
@@ -75,7 +80,7 @@
 	box-sizing: border-box;
 }
 
-.add-to-cart {
+.add-to {
 	margin-top: -0.2rem;
 	width: 4rem;
 }
